# ITKParticleShapeModeling

./: .gitignore  CMakeLists.txt  SHIREEN_Notes.txt  git_setup.txt
Data/: analyze.xml
Data/Torus2/: run.txt
Data/Torus2/log/: torus.PSMEntropyModelFilterMultiscale_Jacobi_Cotan_Manual_PW005_EIG.txt  torus.PSMEntropyModelFilterMultiscale_Jacobi_Cotan_Manual_PW005_SVD.txt  torus.PSMEntropyModelFilterMultiscale_Jacobi_Cotan_Manual_PW015_SVD.txt  torus.PSMEntropyModelFilterMultiscale_Jacobi_Cotan_Manual_PW01_SVD.txt  torus.PSMEntropyModelFilterMultiscale_Jacobi_Cotan_Manual_PW02_SVD.txt  torus.PSMEntropyModelFilterMultiscale_Jacobi_Cotan_Manual_PW05_SVD.txt  torus.PSMEntropyModelFilterMultiscale_Jacobi_Cotan_Manual_PW08_SVD.txt  torus.PSMEntropyModelFilterMultiscale_Jacobi_Cotan_Manual_PW1_EIG.txt  (+9 more)
Data/box_1bumpin_position/: run.txt
Data/box_1bumpout_position/: run.txt
Data/box_1bumpout_position2/: .run.txt.kate-swp
Data/box_1mode/: run.txt
Data/box_2bumpout_position/: run.txt
Data/box_3bumpout_position/: run.txt
include/: itkPSMCommandLineClass.h  itkPSMEntropyModelFilter.h  itkPSMEntropyModelFilter.hxx  itkPSMGradientDescentOptimizer.h  itkPSMGradientDescentOptimizer.hxx  itkPSMParticleEntropyFunction.h  itkPSMParticleEntropyFunction.hxx  itkPSMProject.h  itkPSMShapeEntropyFunction.h  itkPSMShapeEntropyFunction.hxx  itkPSMShapeMatrixAttribute.h  itkPSMTwoCostFunction.h  itkPSMTwoCostFunction.hxx
src/: itkPSMCommandLineClass.cxx  itkPSMCommandLineTool.cxx  itkPSMProcrustesRegistration.cxx  itkPSMProject.cxx
test/: itkPSMTwoCostFunctionTest.cxx
(+1626 files in other folders)
